updated alignment issues with potrait-img-view-post

--- a/Profile/static/css/view_post.css
+++ b/Profile/static/css/view_post.css
@@ -352,7 +352,13 @@
         margin-top: 15%;
     }
 
-    .status-view, .wrap-img-view, .wrap-potrait-view, .post-pic-enlarged-view { border-radius: 0; }
+    .status-view, .wrap-img-view, .wrap-potrait-view, 
+    .post-pic-enlarged-view, .wrap-potrait-data-view { border-radius: 0; }
+
+    .wrap-potrait-data-view {
+        width: 100%;
+
+    }
 
     .wrap-data-view { 
         border-radius: 0; 
@@ -374,6 +380,14 @@
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .post-view {
         flex-direction: column;
+    }
+
+    .potrait-hw {
+        width: unset;
+    }
+
+    .potrait-height {
+        height: unset;
     }
 
     .wrap-img-view {
@@ -399,6 +413,15 @@
         -moz-border-radius: 0rem 0rem 2rem 2rem;
         -o-border-radius: 0rem 0rem 2rem 2rem;
         width: 100%;
+    }
+
+    .wrap-potrait-data-view {
+        width: unset;
+        border-radius: 0;
+         -webkit-border-radius: 0;
+        -ms-border-radius: 0;
+        -moz-border-radius: 0;
+        -o-border-radius: 0;
     }
 
     .post-view-card-body, .comment-view-card-body {
